--- a/_config.yml
+++ b/_config.yml
@@ -23,9 +23,9 @@ repository               : "academicpages/academicpages.github.io"
 author:
   # Biographic information
   avatar           : "profile.png"
-  name             : "Your Sidebar Name"
+  name             : "Junkai Hou"
   pronouns         : # example: "she/her"  
-  bio              : "Short biography for the left-hand sidebar"
+  bio              : "BUPT 2026 Ph.D"
   location         : "Earth"
   employer         : "Red Brick University"
   uri              : # URL
