--- a/_config.yml
+++ b/_config.yml
@@ -27,7 +27,8 @@ author:
   pronouns         : # example: "she/her"  
   bio              : "BUPT 2026 Ph.D"
   location         : "Beijing, China"
-  employer         : "Beijing University of Posts and Telecommunications"
+  employer         : "Beijing University of Posts and   
+  Telecommunications"
   uri              : # URL
   email            : "houjunkai@bupt.edu.cn" 
 
